assets/style/main.css
* {
    font-family: 'Playfair Display', serif;
    color: #141414;
}

html {
    height: 100%;
    width: 100%;
    box-sizing: border-box;
}

body {
    background-color: #f8f8ff;
    position: relative;
    margin: 0;
    min-height: 100%;
}

#search-page {
    position: absolute;
    top: 30%;
    bottom: 20%;
    left: 0;
    right: 0;
    margin: auto;
    max-width: 100%;
    max-height: 100%;
    overflow: auto;
}

h1 {
    text-align: center;
    font-size: 3em;
}

.search-box {
    width: 100%;
    margin: 1.250em auto 3.13em;
    text-align: center;
}

.back-to-search {
    background-color: #f8f8ff;
    border: 1px solid #141414;
    display: none;
    font-size: 1.075em;
    font-weight: 500;
    margin: 2% 45%;
    z-index: 999;
}

button.back-to-search:hover{
    cursor: pointer;
}

#results-page {
    display: none;
    position: absolute;
    top: 2%;
    bottom: 15%;
    left: 0;
    right: 0;
    margin: auto;
    max-width: 100%;
    max-height: 100%;
    overflow: auto;
}

.results-banner {
    position: fixed;
    right: 0;
    top: 0;
    left: 0;
    padding: 1rem;
    text-align: center;
    width: 100%;
}

.fa {
    border-right: 1px solid #F5F5F5;
    height: 12px;
    width: 12px;
    position: absolute;
    padding-left: 8px;
    margin: 7px;
}

#query {
    width: 50%;
    height: 2.728em;
    border: 0.0625em solid #ddd;
    font-size: 0.875em;
    padding-left: 3.14em;
    font-family: Arial;
    background-color: #F5F5F5;
    margin: 0 auto;
}

i {
    font-size: 0.938em;
    text-align: center;
    padding: 8px 10px;
    color: #A5A5A5;
}

input[type=text]:focus {
    outline: none;
}

li {
    font-size: 1.135rem;
    font-weight: 600;
    list-style: none;
    margin-top: 5%;
    text-align: center;
    z-index: 0;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.footer {
    position: fixed;
    right: 0;
    bottom: 0;
    left: 0;
    padding: 1rem;
    text-align: center;
    width: 100%;
}

.footer p {
    font-size: 1.2rem;
    font-weight: 700;
    padding-top: 10px;
}

.frustration {
    color: red;
}


@media screen and (max-width: 571px){
    h1 {
        font-size: 2.5rem;
    }

    li {
        font-size: 1rem;
    }

    .footer p {
        font-size: 0.875rem;
    }
}

